--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -297,9 +297,6 @@
     <ClCompile Include="..\..\Device\src\libs\USBH\usbh_conf.cpp">
       <Filter>libs\USBH</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\libs\USBH\usbh_diskio.cpp">
-      <Filter>libs\USBH</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\defines.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -431,6 +428,60 @@
     </ClCompile>
     <ClCompile Include="..\..\Device\src\tables.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_tim.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_tim_ex.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_dma.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_pcd.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_spi.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_crc.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_rcc.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_ll_fmc.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_flash.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_flash_ex.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_adc.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_gpio.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\HAL\stm32f4xx_hal_rtc.cpp">
+      <Filter>libs\HAL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\USBH\usbh_diskio.cpp">
+      <Filter>libs\USBH</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\USBH\usbh_msc.cpp">
+      <Filter>libs\USBH</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\FatFS\ff_gen_drv.cpp">
+      <Filter>libs\FatFS</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\FatFS\ff.cpp">
+      <Filter>libs\FatFS</Filter>
+    </ClCompile>
+    <ClCompile Include="src\include\USBH\usbh_core.cpp">
+      <Filter>libs\USBH</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -650,9 +701,6 @@
     <ClInclude Include="..\..\Device\src\libs\USBH\usbh_conf.h">
       <Filter>libs\USBH</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Device\src\libs\USBH\usbh_diskio.h">
-      <Filter>libs\USBH</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\Utils\Measure.h">
       <Filter>Utils</Filter>
     </ClInclude>
@@ -825,6 +873,9 @@
       <Filter>libs\USBH</Filter>
     </ClInclude>
     <ClInclude Include="src\include\USBH\usbh_msc.h">
+      <Filter>libs\USBH</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\USBH\usbh_diskio.h">
       <Filter>libs\USBH</Filter>
     </ClInclude>
   </ItemGroup>
