Компилируется/работает на приборе. Пока не показывает сигнал

--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -1925,6 +1925,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Data\Reader.h</FilePath>
             </File>
+            <File>
+              <FileName>Storage.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Data\Storage.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Storage.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Data\Storage.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
